--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -54,7 +54,7 @@
                 <!--Folder-->
                 <HierarchicalDataTemplate DataType="{x:Type models:Folder}" ItemsSource="{Binding Items}">
                     <StackPanel Height="30" 
-                                Width="180"
+                                MinWidth="160"
                                 Orientation="Horizontal"
                                 Background="Transparent"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
@@ -130,7 +130,7 @@
                 <!--Item-->
                 <DataTemplate DataType="{x:Type models:Item}">
                     <StackPanel Orientation="Horizontal"
-                                Width="180"
+                                MinWidth="160"
                                 Height="30"
                                 Background="Transparent"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
