--- a/src/AnyStatus/Features/Edit/EditWindow.xaml
+++ b/src/AnyStatus/Features/Edit/EditWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="AnyStatus.Features.Edit.EditWindow"
+﻿<vsp:DialogWindow x:Class="AnyStatus.Features.Edit.EditWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:AnyStatus.Features.Edit"
+             xmlns:vsp="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.14.0"
              mc:Ignorable="d" 
              Height="350" 
              Width="600"
              Title="Properties"
              WindowStartupLocation="CenterScreen"
-             d:DataContext="{d:DesignInstance Type=local:EditViewModel}" 
-             Icon="/AnyStatus;component/Resources/StatusSecurityOK_16x.png">
+             d:DataContext="{d:DesignInstance Type=local:EditViewModel}">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -37,4 +37,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</vsp:DialogWindow>
