--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AnyStatus.Views.NewWindow"
+﻿<vsp:DialogWindow x:Class="AnyStatus.Views.NewWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
              Width="650"
              Title="New Item"
              WindowStartupLocation="CenterScreen"
-             d:DataContext="{d:DesignInstance Type=vm:NewViewModel}" Icon="/AnyStatus;component/Resources/StatusSecurityOK_16x.png">
+             d:DataContext="{d:DesignInstance Type=vm:NewViewModel}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="170" Width="Auto"></ColumnDefinition>
@@ -59,4 +59,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</vsp:DialogWindow>
