--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -25,6 +25,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
+        
         <ListBox Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
                  ItemsSource="{Binding Templates}" 
                  SelectedItem="{Binding SelectedTemplate}" 
@@ -39,9 +40,19 @@
         <GridSplitter Grid.Column="1" Grid.RowSpan="2" Foreground="Gray" HorizontalAlignment="Stretch"/>
 
         <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-            <TextBlock FontSize="24" Text="{Binding SelectedTemplate.Name}" Margin="15,5,5,5" />
-            <TextBlock Text="{Binding SelectedTemplate.Description}" Margin="15,5,5,5" />
-            <xctk:PropertyGrid Margin="3"
+            <TextBlock FontSize="24" Text="{Binding SelectedTemplate.Name}" Margin="4" />
+            <TextBlock Text="{Binding SelectedTemplate.Description}" TextWrapping="Wrap" Margin="5">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Style.Triggers>
+                            <Trigger Property="Text" Value="">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+            <xctk:PropertyGrid Margin="3,3,8,10"
                            ShowSearchBox="False" 
                            ShowSortOptions="False"
                            ShowSummary="True"
