--- a/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
+++ b/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
@@ -8,29 +8,29 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
 
-    <UserControl.DataContext>
-        <vm:OptionsViewModel />
-    </UserControl.DataContext>
-
     <ScrollViewer>
         <StackPanel>
+
             <GroupBox Header="Privacy" Padding="5" Margin="5">
                 <StackPanel>
-                    <CheckBox IsChecked="False" IsEnabled="False">Help us improve by sending anonymous data usage</CheckBox>
+                    <CheckBox IsChecked="{Binding ReportAnonymousUsage}">Help us improve by sending anonymous data usage</CheckBox>
                     <TextBlock><Hyperlink NavigateUri="https://github.com/AlonAm/AnyStatus/blob/master/PRIVACY.md" RequestNavigate="Hyperlink_RequestNavigate">Learn more</Hyperlink></TextBlock>
                 </StackPanel>
             </GroupBox>
+
             <GroupBox Header="Debug" Padding="5" Margin="5">
                 <StackPanel>
-                    <CheckBox IsChecked="True" IsEnabled="False">Write debug information in the Output window</CheckBox>
+                    <CheckBox IsChecked="{Binding DebugMode}">Write debug information in the Output window</CheckBox>
                 </StackPanel>
             </GroupBox>
+                
             <GroupBox Header="Restore Default Settings" Padding="5" Margin="5">
                 <StackPanel HorizontalAlignment="Left">
                     <TextBlock Margin="3">Note: This deletes all user-entered information</TextBlock>
                     <Button HorizontalAlignment="Left" Width="150" Command="{Binding RestoreDefaultSettingsCommand}" Margin="3">Restore Default Settings</Button>
                 </StackPanel>
             </GroupBox>
+                
         </StackPanel>
     </ScrollViewer>
 
