added remove to job scheduler +  support "delete" key

--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -278,6 +278,7 @@
 
             <TreeView.InputBindings>
                 <KeyBinding Key="F2" Command="{Binding RenameCommand}" CommandParameter="{Binding ElementName=TreeView, Path=SelectedItem}"/>
+                <KeyBinding Key="Delete" Command="{Binding DeleteCommand}" CommandParameter="{Binding ElementName=TreeView, Path=SelectedItem}"/>
             </TreeView.InputBindings>
 
             <TreeView.ItemContainerStyle>
