--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -264,6 +264,14 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
 
+                                <MenuItem Header=" Duplicate" 
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DuplicateCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.CopyItem}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+
                                 <Separator/>
 
                                 <MenuItem Header=" Properties" 
